MOSIP-14371 : added required plugins (#506)
* MOSIP-14371 : added hazelcast jar + health indicator

* MOSIP-14371 : added hazelcast jar + health indicator

* MOSIP-14371 : added required plugins

Co-authored-by: Monobikash Das <M1045447@mindtree.com>